--- a/style.css
+++ b/style.css
@@ -7,5 +7,13 @@ background: hotpink;
 
 h1 {
 
-color: pink;	
+color: pink;
+background: darkblue;	
+}
+
+p {
+
+color: darkblue;
+background: pink;
+
 }
