--- a/p2draft_01.css
+++ b/p2draft_01.css
@@ -20,10 +20,13 @@ left:430px;
 font-family: sans-serif;
 font-size: 100px;
 }
+
 .container {
 	position: absolute;
 	position: top: 10px;
 	position: left: 30px;
+transition: color 1s;
+
 display: flex;
 text-decoration: none;
 white-space: nowrap;
@@ -37,6 +40,7 @@ color: #707070;
 font-family: sans-serif;	
 text-decoration: none;
 font-size: 300px
+
 
 }
 
