--- a/p2copy/pagecontent2copy.css
+++ b/p2copy/pagecontent2copy.css
@@ -1,8 +1,8 @@
 html {
-background: white;
+background: #93B993;
 }
 body{
-	background: white;
+	background: #93B993;
 	padding:150px;
 	padding-top: 10px;
 	font-size: 3px;
