--- a/p2copy/pagecontent3copy.css
+++ b/p2copy/pagecontent3copy.css
@@ -1,8 +1,8 @@
 html {
-background: white;
+background: #93B993;
 }
 body{
-	background: white;
+	background: #93B993;
 	padding:20px;
 	font-size: 10px;
 	line-height: 2rem;
@@ -14,7 +14,7 @@ body{
 
 p {
 
-color: black;
+color: #F523F5;
 font-size: 18px;
 line-height: 0.5rem;
 font-family: monospace;
@@ -30,7 +30,7 @@ font-family: monospace;
 	p {
 
 		font-size: 3em;
-		color: black;
+		color: #F523F5;
 	}
 
 	}
