--- a/p2copy/pagecontent4copy.css
+++ b/p2copy/pagecontent4copy.css
@@ -1,8 +1,8 @@
 html {
-background: white;
+background: #93B993;
 }
 body{
-	background: white;
+	background: #93B993;
 	font-size: 16px;
 	padding: 150px;
 	line-height: 70px;
@@ -14,7 +14,7 @@ body{
 
 p {
 
-color: black;
+color: #707070;
 font-size: 1rem;
 font-family: serif;
 
@@ -29,7 +29,7 @@ font-family: serif;
 	p {
 
 		font-size: 2em;
-		color: black;
+		color: #707070;
 		padding: 200px;
 		line-height: 70px
 	}
