--- a/p2/p2-copy-2/pagecontent2copy.2css.css
+++ b/p2/p2-copy-2/pagecontent2copy.2css.css
@@ -1,21 +1,20 @@
 html {
-background: white;
+background: #707070;
 }
 body{
-	background: white;
-	font-size: 16px;
-	padding: 150px;
-	line-height: 70px;
+	background: #707070;
+	padding:150px;
+	padding-top: 10px;
+	font-size: 3px;
 
 }
-
 
 
 
 p {
 
-color: black;
-font-size: 1rem;
+color: #93B993;
+font-size: 3px;
 font-family: serif;
 
 }
@@ -28,10 +27,10 @@ font-family: serif;
 @media screen and (min-width: 768px) {
 	p {
 
-		font-size: 2em;
-		color: black;
-		padding: 200px;
-		line-height: 70px
+		font-size: 3em;
+		color: #93B993;
+		padding:200px;
+	padding-top: 10px;
 	}
 
 	}
