--- a/p2/p2-copy-2/pagecontent4copy2.css
+++ b/p2/p2-copy-2/pagecontent4copy2.css
@@ -1,20 +1,21 @@
 html {
-background: white;
+background: #707070;
 }
 body{
-	background: white;
-	padding:150px;
-	padding-top: 10px;
-	font-size: 3px;
+	background: #707070;
+	font-size: 16px;
+	padding: 150px;
+	line-height: 70px;
 
 }
+
 
 
 
 p {
 
-color: darkgrey;
-font-size: 3px;
+color: #F523F5;
+font-size: 1rem;
 font-family: serif;
 
 }
@@ -27,10 +28,10 @@ font-family: serif;
 @media screen and (min-width: 768px) {
 	p {
 
-		font-size: 3em;
-		color: black;
-		padding:200px;
-	padding-top: 10px;
+		font-size: 2em;
+		color: #F523F5;
+		padding: 200px;
+		line-height: 70px
 	}
 
 	}
