--- a/p2/p2-copy-2/pagecontent5copy2.css
+++ b/p2/p2-copy-2/pagecontent5copy2.css
@@ -1,8 +1,8 @@
 html {
-background: white;
+background: #93B993;
 }
 body{
-	background: white;
+	background: #93B993;
 	padding:20px;
 	font-size: 16px;
 	letter-spacing: 10px;
@@ -17,7 +17,7 @@ body{
 
 p {
 
-color: black;
+color: #707070;
 font-size: 18px;
 font-kerning: 5px;
 font-family: sans-serif;
@@ -33,7 +33,7 @@ font-family: sans-serif;
 	p {
 
 		font-size: 32px;
-		color: black;
+		color: #707070;
 		padding: 200px;
 		padding-top: 30px;
 		letter-spacing: 15px;
