--- a/lab/lab-workshop/class-cookbook/recipe-style.css
+++ b/lab/lab-workshop/class-cookbook/recipe-style.css
@@ -1,54 +1,47 @@
 html {
-
-background: pink;
-
+	background: pink;
 }
 
 h1 {
-
-font-family: "Brush Script MT, cursive";
-font-weight: bold;
-color: darkblue;
-	
+	font-family: "Brush Script MT, cursive";
+	font-weight: bold;
+	color: darkblue;	
 }
 
 p {
-font-family: "Georgia, serif";
-color: darkgreen;
-
+	font-family: "Georgia, serif";
+	color: darkgreen;
 }
 
 ul {
-font-family: "Courier New, monospace";
-color: orange;
-background-color: lightblue;
+	font-family: "Courier New, monospace";
+	color: orange;
+	background-color: lightblue;
 }
 
 ol {
-font-family: "Helvetica, sans-serif";
-color: purple;	
+	font-family: "Helvetica, sans-serif";
+	color: purple;	
 }
 
 h2 {
-
-font-family: "Tahoma, sans-serif";
-font-weight: bold;
-color: darkblue;
-letter-spacing: 30px
+	font-family: "Tahoma, sans-serif";
+	font-weight: bold;
+	color: darkblue;
+	letter-spacing: 30px;
+}
 
 .ingredients {
-font-size: 20px;
-text-transform: capitalize;
-letter-spacing: 3px
-
+	font-size: 20px;
+	text-transform: capitalize;
+	letter-spacing: 3px;
 }
 
 
 .instructions{
-font-size: 20px;
-text-transform: capitalize;
-letter-spacing: 3px
-
+	font-size: 20px;
+	text-transform: capitalize;
+	letter-spacing: 3px;
 }
 
 
