--- a/untitled folder/ec-draft3copy.css
+++ b/untitled folder/ec-draft3copy.css
@@ -3,11 +3,11 @@ button:focus {
     }
 
 html, body {
-	background-color: white;
+	background-color: black;
 }
 
 img {
-	width: 400px; 
+	width: 20%; 
 }
 
 h1 {
@@ -75,12 +75,13 @@ color: darkblue;
 }
 
 .center:hover {
-	cursor: pointer;
+	width: 320px;
 
 }
 
+.play:hover {
 
-
+}
 
 
 
