--- a/studio/typer-4/style2.css
+++ b/studio/typer-4/style2.css
@@ -145,12 +145,11 @@ h5 {
 
 
 img {
-  padding: -20px;
-  width: 100px;
-  animation-name: example;
-  animation-duration: 4s;
-  animation-delay: 2s;
-  padding-right: -20px;
+    padding: -20px;
+    padding-right: -20px;
+    position: absolute;
+    top: 280px;
+    width: 90%;
 }
 
 @media screen and (min-width: 768px) {
