--- a/studio/studioprojects/ec-draft3.css
+++ b/studio/studioprojects/ec-draft3.css
@@ -83,7 +83,7 @@ border-color: transparent;
   width: 300px;
   left: 50%;
   top: 30%;
-  position: absolute;
+  position: fixed;
   transform: translate(-50%);
 }
 
