--- a/studio/studioprojects/p2/final/finaldraft/pagecontent2final.css
+++ b/studio/studioprojects/p2/final/finaldraft/pagecontent2final.css
@@ -2,31 +2,24 @@ html {
 	background: none;
 }
 
-.mark{
+.mark {
 	color: #F523F5;
 	font-size: 700px;
 	font-family: sans-serif;
 	line-height: 0;
 	z-index:-1;
 	position: fixed;
-	left: 512px;
-	top: -300px;	
+	left: 450px;	
 }
 
-body{
+body {
 	background: none;
 	padding:150px;
 	padding-top: 10px;
 	font-size: 3px;
 }
 
-.mark{
-	color: #F523F5;
-	font-size: 700px;
-	font-family: sans-serif;
-	line-height: 0;
-	z-index:-1;	
-}
+
 
 p {
 	color: black;
@@ -42,13 +35,14 @@ p {
 .top {
 
 	display: flex;
-	flex-direction: rows;
-	position: absolute;
-	top-position: 10px;
-	text-transform: uppercase;
-	color: black;
-	font-size: 1rem;
-	font-family: sans-serif;
+    flex-direction: row;
+    /* position: absolute; */
+    top: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    /* font-size: 1rem; */
+    font-family: sans-serif;
 }
 
 @media screen and (min-width: 768px) {
@@ -59,21 +53,19 @@ p {
 		padding-top: 10px;
 	}
 
-
-@media screen and (min-width: 768px) {
-	.mark {
-		font-size: 700px;
-		font-family: sans-serif;
-		line-height: 0;
-		z-index:-1;
-		left: 584px;
-		top: -370px;	
-	}
 }
 
+
 @media screen and (max-width: 1024px) {
-	p {
-		font-size: 4em;
-		
+
+.mark {
+    font-size: 700px;
+    font-family: sans-serif;
+    line-height: 0;
+    z-index: -1;
+    position: fixed;
+    left: 290px;
+    top: 170px;
+}	
 	}
 }
